Adjust z-index, open doctype filter with JS Also fix black pre-commit error [run percy]

--- a/sitemedia/scss/components/_searchform.scss
+++ b/sitemedia/scss/components/_searchform.scss
@@ -352,7 +352,7 @@ main.search form {
             &:active {
                 border: none;
                 outline: 2px solid var(--link-primary);
-                z-index: 2;
+                z-index: 3;
             }
             input[type="checkbox"] {
                 @include a11y.sr-only;
